# GPU-Test

./: .gitignore  build.gradle.kts  settings.gradle.kts
.github/workflows/: android-ci.yml  main.yml
app/: build.gradle.kts  lint.xml
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  spv_to_header.py  vulkan_info.cpp  vulkan_test.cpp
app/src/main/cpp/shaders/: sphere.frag  sphere.vert  sphere_frag_spv.h  sphere_vert_spv.h
app/src/main/java/com/uniaball/gputest/: MainActivity.java  VulkanUtils.java
app/src/main/kotlin/com/uniaball/gputest/: GLES32Utils.kt  GLTestActivity.kt  MainActivity.kt  SettingsActivity.kt  VulkanTestActivity.kt  VulkanTestUtils.kt  VulkanUtils.kt
app/src/main/res/layout/: activity_gltest.xml  activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
